tests/csmith/bad/smith001610.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1610
 * Seed:      1610
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile uint64_t g_2 = 0x17F759609C3FBB4ELL;/* VOLATILE GLOBAL g_2 */
 volatile int32_t g_4[2][1] = {{1L}, {1L}};
 volatile int32_t * volatile g_3 = &g_4[1][0];/* VOLATILE GLOBAL g_3 */


/* --- FORWARD DECLARATIONS --- */
int32_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_2 g_3 g_4
 * writes: g_4
 */
int32_t  func_1(void)
{ /* block id: 0 */
    int32_t **l_5 = 0;
    (*g_3) = g_2;
    l_5 = l_5;
    return (*g_3);
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    int i, j;
    func_1();
    printf("checksum g_2 = %d\n", g_2);
    printf("checksum g_4[0][0] = %d\n", g_4[0][0]);
    printf("checksum g_4[1][0] = %d\n", g_4[1][0]);
    printf("checksum g_4[1][0] = %d\n", g_4[1][0]);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 4

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 3

XXX total number of pointers: 2

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 1

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 4
XXX number of pointers point to pointers: 1
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 50
XXX average alias set size: 1

XXX times a non-volatile is read: 1
XXX times a non-volatile is write: 1
XXX times a volatile is read: 3
XXX    times read thru a pointer: 1
XXX times a volatile is write: 2
XXX    times written thru a pointer: 1
XXX times a volatile is available for access: 2
XXX percentage of non-volatile access: 28.6

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 4

XXX percentage a fresh-made variable is used: 50
XXX percentage an existing variable is used: 50
********************* end of statistics **********************/

